# XAIR

./: .gitignore  CMakeLists.txt  README.md
docs/: phase-plan.md  phase2-canonicalization.md  phase3-executor.md  phase4-vex-adapter.md  phase5a-binary-frontend.md  phase5b-benchmark-ready-lifter.md
include/xair/: xair.h  xair_binary.h  xair_frontend.h  xair_vex.h
src/: xair.c  xair_binary.c  xair_frontend.c  xair_vex.c  xair_x86_decode.c  xair_x86_decode.h
tests/: test_core.c  test_frontend.c
tests/cases/: mov_ret.xaircase
tools/: xair_bench_lift.c  xair_case_run.c  xair_lift_bin.c  xair_lift_raw.c
